<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_weight="0.5"
        android:layout_height="match_parent">
        <SeekBar
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:id="@+id/seekBar1"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="100dp"
            />

        <SeekBar
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:id="@+id/seekBar2"
            android:layout_below="@+id/seekBar1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <SeekBar
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:id="@+id/seekBar3"
            android:layout_below="@+id/seekBar1"
            android:layout_toRightOf="@+id/seekBar1" />

        <SeekBar
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:id="@+id/seekBar4"
            android:layout_below="@+id/seekBar2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <SeekBar
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:id="@+id/seekBar5"
            android:layout_below="@+id/seekBar3"
            android:layout_alignStart="@+id/seekBar3"
            android:layout_alignLeft="@+id/seekBar3"/>

        <SeekBar
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:id="@+id/seekBar6"
            android:layout_below="@+id/seekBar4"
            android:layout_marginLeft="30dp" />


        <SeekBar
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:id="@+id/seekBar7"
            android:layout_below="@+id/seekBar5"
            android:layout_marginLeft="170dp" />

        <SeekBar
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:id="@+id/seekBar8"
            android:layout_below="@+id/seekBar6"
            android:layout_alignLeft="@+id/seekBar6"
            />

        <SeekBar
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:id="@+id/seekBar9"
            android:layout_below="@+id/seekBar7"
            android:layout_alignLeft="@+id/seekBar7"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_debug"
        android:layout_width="0dp"
        android:layout_weight="0.35"
        android:layout_height="match_parent">
        <ListView
            android:id="@+id/lv_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_above="@+id/ll_debug"
            />

        <LinearLayout
            android:id="@+id/ll_debug"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_debug_return"
                android:layout_width="wrap_content"
                android:text="上一步"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/btn_debug_run"
                android:layout_width="wrap_content"
                android:text="运行"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/btn_debug_next"
                android:layout_width="wrap_content"
                android:text="下一步"
                android:layout_height="match_parent" />
        </LinearLayout>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="0.15"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_add_action"
            android:layout_width="match_parent"
            android:text="@string/str_add_action"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_edit_action"
            android:layout_width="match_parent"
            android:text="@string/str_edit_action"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_save_action"
            android:layout_width="match_parent"
            android:text="@string/str_save_action"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_quit_edit_action"
            android:layout_width="match_parent"
            android:text="@string/str_quit_edit_action"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_debug_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_quit_debug_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>